fixed scrolling issues - small design changes on burger menu bar width - small jump on desktop when using really small screen - but mobile is optimized

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -49,7 +49,8 @@ img {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  min-height: 50px; }
+  min-height: 50px;
+  z-index: 3; }
 
 .nav-start {
   display: flex;
@@ -112,8 +113,9 @@ img {
   visibility: hidden;
   transition: opacity 0.35s, width 0.6s ease, visibility 0.35s; }
 
-.noscroll {
-  overflow: hidden; }
+.menu-isopen {
+  height: 100vh;
+  overflow-y: hidden; }
 
 .menu-overlay.active {
   width: 100%;
@@ -177,7 +179,7 @@ img {
 
 .menu-button__burger {
   width: 30px;
-  height: 4px;
+  height: 2px;
   background: #fff;
   border-radius: 5px;
   transition: all 0.5s ease-in-out;
@@ -188,17 +190,17 @@ img {
   content: '';
   position: absolute;
   width: 30px;
-  height: 4px;
+  height: 2px;
   background: #fff;
   border-radius: 5px;
   transition: all 0.5s ease-in-out;
   pointer-events: none; }
 
 .menu-button__burger::before {
-  transform: translateY(-10px); }
+  transform: translateY(-7px); }
 
 .menu-button__burger::after {
-  transform: translateY(10px); }
+  transform: translateY(7px); }
 
 .menu-button.open .menu-button__burger {
   transform: translateX(-50px);
